trying to fix situation on ios safari

--- a/src/main/resources/static/comic.css
+++ b/src/main/resources/static/comic.css
@@ -17,6 +17,7 @@ body {
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
     -ms-user-select: none; /* IE10+ */
+    touch-action: manipulation;
 }
 #ch_canv {
     display: block;
